welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:32: error: not found: value color
    faireV(color.yellow);
           ^MethodsPicture:33: error: not found: value color
    faireV(color.red);
           ^MethodsPicture:34: error: not found: value color
    faireV(color.blue);
           ^MethodsPicture:35: error: not found: value color
    faireV(color.green);
           ^